exports[`ForgotPasswordEmail should render 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Send Password Reminder
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24,
          },
          false,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left",
              },
              undefined,
            ],
          ]
        }>
        Email
      </Text>
      <TextInput
        label="Email"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#c0cbcc"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 18,
              "marginBottom": 8,
              "padding": 0,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="" />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        Send Email
      </Text>
    </View>
  </View>
</View>
`;

exports[`ForgotPasswordEmail should render with error message when forgotPassword status is bad address 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Send Password Reminder
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24,
          },
          false,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left",
              },
              undefined,
            ],
          ]
        }>
        Email
      </Text>
      <TextInput
        label="Email"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#c0cbcc"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 18,
              "marginBottom": 8,
              "padding": 0,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="" />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#d30000",
            "fontSize": 14,
            "marginTop": -20,
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "textAlign": "left",
          },
        ]
      }>
      \'Not a valid email address\'
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        Send Email
      </Text>
    </View>
  </View>
</View>
`;
